# netdiag-twin

./: .gitignore  Cargo.toml  README.md  perf-baseline.json
.github/workflows/: ci.yml  release.yml
crates/netdiag-app/: Cargo.toml
crates/netdiag-app/assets/: NetDiagTwin.icns
crates/netdiag-app/src/: data_source.rs  layout.rs  lib.rs  main.rs  native_menu.rs  secrets.rs  settings.rs  trend.rs  updater.rs  view_model.rs
crates/netdiag-cli/: Cargo.toml
crates/netdiag-cli/src/: main.rs
crates/netdiag-core/: Cargo.toml
crates/netdiag-core/benches/: perf_budget.rs
crates/netdiag-core/src/: connectors.rs  error.rs  ingest.rs  lib.rs  ml.rs  models.rs  perf_budget.rs  pipeline.rs  recommendation.rs  report.rs  rules.rs  storage.rs  telemetry.rs  twin.rs
crates/netdiag-core/tests/: golden.rs
data/manifests/: README.md  normal_manifest.json
data/samples/: congestion.csv  dns_failure.csv  normal.csv  random_loss.csv  tls_failure.csv  udp_quic_blocked.csv
data/scenarios/: README.md  preset_actions.json
docs/: api-source.md  architecture.md  getting-started.md  short_report.md
scripts/: check_perf_budget.sh  generate_appcast.sh  package_macos_app.sh
