[workspace]
members = [
    "crates/netdiag-core",
    "crates/netdiag-cli",
    "crates/netdiag-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.1"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
eframe = "0.34.1"
egui_extras = "0.34.1"
float-cmp = "0.10"
insta = "1.47"
linfa = { version = "0.8.1", features = ["serde"] }
linfa-logistic = { version = "0.8.1", features = ["serde"] }
muda = { version = "0.17.2", default-features = false }
ndarray = { version = "0.16", features = ["serde"] }
petgraph = "0.8.3"
rand = { version = "0.9", features = ["std", "std_rng"] }
rand_distr = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
