[workspace]
members = [
    "crates/netdiag-core",
    "crates/netdiag-cli",
    "crates/netdiag-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.2"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
eframe = "0.34.1"
egui_extras = "0.34.1"
float-cmp = "0.10"
insta = "1.47"
linfa = { version = "0.8.1", features = ["serde"] }
linfa-logistic = { version = "0.8.1", features = ["serde"] }
muda = { version = "0.17.2", default-features = false }
ndarray = { version = "0.16", features = ["serde"] }
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "metrics"] }
pcap = "2.4.0"
petgraph = "0.8.3"
rand = { version = "0.9", features = ["std", "std_rng"] }
rand_distr = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tonic = "0.14.5"
uuid = { version = "1.19", features = ["v4", "serde"] }
etherparse = "0.20.1"
