[workspace]
members = [
    "crates/netdiag-core",
    "crates/netdiag-cli",
    "crates/netdiag-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.6"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
eframe = "0.34.1"
egui_extras = "0.34.1"
float-cmp = "0.10"
insta = "1.47"
linfa = { version = "0.8.1", features = ["serde"] }
linfa-logistic = { version = "0.8.1", features = ["serde"] }
muda = { version = "0.19.1", default-features = false }
ndarray = { version = "0.16", features = ["serde"] }
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "metrics"] }
pcap = "2.4.0"
petgraph = "0.8.3"
rand = { version = "0.10", features = ["std", "std_rng"] }
rand_distr = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tonic = "0.14.5"
uuid = { version = "1.23", features = ["v4", "serde"] }
etherparse = "0.20.1"
