[package]
name = "netdiag-cli"
description = "Batch and regression CLI for NetDiag Twin"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
netdiag-core = { path = "../netdiag-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde.workspace = true
